# unicode_traits

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  README.md  _travis.yml  appveyor.yml
doc/md/: Home.md  convert.md  detect_encoding.md  encoding.md  encoding_errc.md  is_high_surrogate.md  is_low_surrogate.md  is_surrogate.md  make_sequence_generator.md  sequence_at.md  sequence_generator.md  skip_bom.md  u32_length.md  u8_length.md  uni_errc.md  validate.md
doc/ref/: codepoint_iterator.md  conv_errc.md  convert.md  detect_encoding.md  index.md  is_surrogate.md  sequence.md  sequence_generator.md  skip_bom.md  u32_length.md  validate.md
examples/src/: examples.cpp
include/: unicode_traits.hpp
src/: unicode_traits.hpp  unicode_traits.hpp~RF22c2272f.TMP
tests/: CMakeLists.txt
tests/src/: codepoint_iterator_tests.cpp  convert_tests.cpp  detect_encoding_tests.cpp  helper_tests.cpp  helper_tests.cpp~RF229dad1c.TMP  sequence_at_tests.cpp  sequence_generator_tests.cpp  strict_append_to_string_tests.cpp  u32_length_tests.cpp  u8_length_tests.cpp  unicode_traits_tests.cpp  validate_tests.cpp
